--- a/src/main/resources/static/common.css
+++ b/src/main/resources/static/common.css
@@ -2,6 +2,113 @@
 * {
     font-family: 'Roboto', sans-serif;
 }
+body {
+    font-size:100%;
+}
+a {
+    color: #E10B14;
+}
 h1, h2 {
     text-align: center;
+}
+
+#content {
+    width: 80%;
+    margin: 10px auto;
+}
+.post-grid {
+    display: grid;
+    grid-template-columns: 160px auto;
+    grid-column-gap: 1px;
+    grid-row-gap: 1px;
+}
+.post-grid-content{
+    padding: 2px;
+    box-shadow: 1px;
+}
+.post-author{
+    padding: 2px 0px;
+}
+.post-author-info{
+    font-size: .8em;
+    padding: 2px 0px;
+}
+
+.post-message{
+    padding: 5px;
+}
+.div-directory-link{
+    font-weight: bold;
+    margin:5px;
+    border-bottom: 1px solid #E10B14;
+}
+.div-directory-link a {
+    text-decoration: none;
+}
+.div-main-menu-link{
+    text-align: right;
+    margin: 5px;
+}
+.div-main-menu-link a{
+    padding: 2px;
+}
+.topic-grid{
+    display: grid;
+    grid-template-columns: auto 100px;
+    border: 1px solid black;
+}
+.topic-grid-headers{
+    font-size: .9em;
+    display: grid;
+    grid-template-columns: auto 100px;
+    border: 1px solid black;
+    text-align: center;
+}
+.topic-description{
+    font-size: .9em;
+    padding: 5px;
+}
+.topic-header{
+    padding: 5px;
+}
+.topic-info{
+    padding: 5px;
+}
+.topic-stats{
+    text-align: center;
+    font-size: .9em;
+    padding: 5px;
+}
+.thread-grid {
+    display: grid;
+    grid-template-columns: auto 100px;
+    border: 1px solid black;
+}
+.thread-grid-headers {
+    font-size: .9em;
+    display: grid;
+    grid-template-columns: auto 100px;
+    border: 1px solid black;
+    text-align: center;
+}
+.thread-subject{
+    padding: 5px;
+}
+.thread-stats{
+    text-align: center;
+    font-size: .9em;
+    padding: 5px;
+}
+.button {
+    color: #E10B14;
+    display: inline-block;
+    margin: 10px;
+    padding: 10px;
+    text-decoration:none;
+    font-weight: bold;
+    border: 1px solid #E10B14;
+    border-radius: 12px;
+}
+.button:hover {
+    border-radius: 3px;
 }
