--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,8 +13,8 @@
 </th:block>
 
 <th:block th:fragment="under-construction">
-    <h1>HOME PAGE</h1>
-    <h2>UNDER CONSTRUCTION</h2>
+    <h1>Forum FILMOVIE</h1>
+    <h2>Pomówmy o filmach</h2>
 </th:block>
 
 <!--  th:text="'Forum FILMOVIE >> ' + ${topic.getName()} + ' >> ' + ${thread.getSubject()}" -->
