--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <th:block th:replace="~{fragments.html :: head-meta}"></th:block>
-  <link rel="stylesheet" href="/login.css">
+    <th:block th:replace="~{fragments.html :: head-meta}"></th:block>
+    <link rel="stylesheet" href="/login.css">
 
 </head>
 <body>
 <th:block th:replace="~{fragments.html :: under-construction}"></th:block>
 
 <div id="content">
-  <th:block th:replace="${logged} ? ~{fragments.html :: main-menu-link-logged} : ~{fragments.html :: main-menu-link}"></th:block>
+    <th:block
+            th:replace="${logged} ? ~{fragments.html :: main-menu-link-logged} : ~{fragments.html :: main-menu-link}"></th:block>
 
-  <th:block th:replace="~{fragments.html :: directory-link}"></th:block>
+    <th:block th:replace="~{fragments.html :: directory-link}"></th:block>
 
-  <h4>Podaj dane logowania</h4>
+    <div class="content-login">
+        <h4>Podaj dane logowania</h4>
 
-<form method="post">
-  <label for="login">Login: </label><br>
-  <input type="text" name="login" id="login" class="input" placeholder="Login">
+        <form method="post">
+            <label for="login">Login: </label><br>
+            <input type="text" name="login" id="login" class="input">
 
-  <label for="password">Hasło: </label>
-  <input type="password" name="password" id="password" class="input" placeholder="Password">
-  <input type="submit" value="Zaloguj" class="button">
-</form>
+            <label for="password">Hasło: </label>
+            <input type="password" name="password" id="password" class="input">
+            <input type="submit" value="Zaloguj" class="button">
+        </form>
+    </div>
 </div>
 </body>
 </html>
