--- a/src/main/resources/templates/new-thread.html
+++ b/src/main/resources/templates/new-thread.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <th:block th:replace="~{fragments.html :: head-meta}"></th:block>
+    <link rel="stylesheet" href="/login.css">
 </head>
 <body>
 <th:block th:replace="~{fragments.html :: under-construction}"></th:block>
@@ -11,17 +12,20 @@
             th:replace="${logged} ? ~{fragments.html :: main-menu-link-logged} : ~{fragments.html :: main-menu-link}"></th:block>
 
     <th:block th:replace="~{fragments.html :: directory-link}"></th:block>
+    <div class="content-login">
+        <h4>Napisz nowy temat</h4>
 
-    <form method="post">
-        <label for="subject">Temat: </label>
-        <input type="text" class="input" id="subject" th:field="*{threadModel.subject}">
+        <form method="post">
+            <label for="subject">Temat: </label>
+            <input type="text" class="input" id="subject" th:field="*{threadModel.subject}">
 
-        <label for="contents">Treść wiadomości: </label>
-        <textarea class="input" id="contents" th:field="*{postModel.contents}"></textarea>
+            <label for="contents">Treść wiadomości: </label>
+            <textarea class="input" id="contents" rows="20" th:field="*{postModel.contents}"></textarea>
 
-        <input type="submit" value="Wyślij" class="button">
-        <input type="reset" value="Reset" class="button">
-    </form>
+            <input type="submit" value="Wyślij" class="button">
+            <input type="reset" value="Reset" class="button">
+        </form>
+    </div>
 </div>
 </body>
 </html>
