--- a/src/main/resources/static/login.css
+++ b/src/main/resources/static/login.css
@@ -20,3 +20,13 @@ fieldset {
     display: inline-block;
     padding: 2px;
 }
+
+.error-on{
+    margin: 0px 0px 10px 15px;
+    font-size: .8em;
+    color: #E10B14;
+}
+
+.error-off {
+
+}
