--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,6 +3,8 @@
 <head>
     <th:block th:replace="~{fragments.html :: head-meta}"></th:block>
     <link rel="stylesheet" href="/login.css">
+    <script src="/register-validator.js"></script>
+
 </head>
 <body>
 <th:block th:replace="~{fragments.html :: under-construction}"></th:block>
@@ -16,21 +18,27 @@
     <div class="content-login">
         <h4>Podaj dane rejestracyjne</h4>
 
+<!--  TODO      <form method="post" onsubmit="return validate()">-->
         <form method="post">
             <label for="login">Login: </label><br>
             <input type="text" class="input" id="login" th:field="*{userModel.login}"><br>
+            <div id="login-error"></div>
 
             <label for="password">Hasło: </label><br>
             <input type="password" class="input" id="password" th:field="*{userModel.password}"><br>
+            <div id="password-error"></div>
 
             <label for="password2">Powtórz hasło: </label><br>
             <input type="password" class="input" id="password2" name="password2"><br>
+            <div id="password2-error"></div>
 
             <label for="email">E-mail: </label><br>
             <input type="text" class="input" id="email" th:field="*{userModel.email}"><br>
+            <div id="email-error"></div>
 
             <label for="birthday">Data urodzenia: </label><br>
             <input type="date" class="input" id="birthday" th:field="*{userModel.birthday}"><br>
+            <div id="birthday-error"></div>
 
             <!--        <label for="gender">Płeć: </label>
                     <input type="text" class="input" id="gender" th:field="*{userModel.gender}">-->
@@ -45,9 +53,14 @@
                        th:field="*{userModel.gender}">
                 <label class="input-radio" for="female">Kobieta</label><br>
             </fieldset>
+            <div id="gender-error"></div>
+
 
             <label for="place">Skąd: </label><br>
             <input type="text" class="input" id="place" th:field="*{userModel.place}"><br>
+            <div id="place-error"></div>
+
+
             <input type="submit" value="Zarejestruj" class="button">
             <input type="reset" value="Wyczyść formularz" class="button">
         </form>
