--- a/src/main/resources/templates/new-thread.html
+++ b/src/main/resources/templates/new-thread.html
@@ -3,6 +3,7 @@
 <head>
     <th:block th:replace="~{fragments.html :: head-meta}"></th:block>
     <link rel="stylesheet" href="/login.css">
+    <script src="/thread-validator.js"></script>
 </head>
 <body>
 <th:block th:replace="~{fragments.html :: under-construction}"></th:block>
@@ -15,12 +16,14 @@
     <div class="content-login">
         <h4>Napisz nowy temat</h4>
 
-        <form method="post">
+        <form method="post" onsubmit="return validate()">
             <label for="subject">Temat: </label>
             <input type="text" class="input" id="subject" th:field="*{threadModel.subject}">
+            <div id="subject-error"></div>
 
             <label for="contents">Treść wiadomości: </label>
             <textarea class="input" id="contents" rows="20" th:field="*{postModel.contents}"></textarea>
+            <div id="contents-error"></div>
 
             <input type="submit" value="Wyślij" class="button">
             <input type="reset" value="Reset" class="button">
