--- a/src/main/resources/static/common.css
+++ b/src/main/resources/static/common.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 * {
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
 body {
-    font-size:14px;
+    font-size:.9rem;
 }
 a {
     color: #E10B14;
@@ -32,7 +33,7 @@ h1, h2, h4 {
     padding: 2px;
 }
 .post-author-admin{
-    color: red;
+    color: blue;
     font-weight: bold;
     padding: 2px;
 }
@@ -80,7 +81,7 @@ h1, h2, h4 {
     text-align: center;
 }
 .topic-description{
-    font-size: .9em;
+    font-size: .8rem;
     padding: 5px;
 }
 .topic-header{
@@ -124,7 +125,14 @@ h1, h2, h4 {
 }
 .delete-thread{
     text-align: right;
-    font-size: .8em;
+    font-size: .7rem;
+    padding: 2px;
+}
+
+.delete-topic{
+    display:inline-block;
+    text-align: right;
+    font-size: .7rem;
     padding: 2px;
 }
 
