--- a/src/main/resources/templates/new-topic.html
+++ b/src/main/resources/templates/new-topic.html
@@ -3,23 +3,29 @@
 <head>
     <th:block th:replace="~{fragments.html :: head-meta}"></th:block>
     <link rel="stylesheet" href="/form.css">
-    <script src="/reply-validator.js"></script>
+    <script src="/topic-validator.js"></script>
 </head>
 <body>
 <th:block th:replace="~{fragments.html :: page-header}"></th:block>
 
 <div id="content">
     <th:block
-            th:replace="${logged} ? ~{fragments.html :: main-menu-link-logged} : ~{fragments.html :: main-menu-link}"></th:block>
+            th:replace="${logged} ? ~{fragments.html :: main-menu-link-logged} : ~{fragments.html :: main-menu-link}">
+    </th:block>
 
     <th:block th:replace="~{fragments.html :: directory-link}"></th:block>
 
     <div class="content-form">
-        <h4>Napisz odpowiedź</h4>
+        <h4>Dodaj nowe forum</h4>
         <form method="post" onsubmit="return validate()">
-            <label for="contents">Treść wiadomości: </label>
-            <textarea class="input" id="contents" rows="20" th:field="*{postModel.contents}"></textarea>
-            <div id="contents-error"></div>
+            <label for="name">Temat: </label>
+            <input type="text" class="input" id="name" th:field="*{topicModel.name}">
+            <div id="name-error"></div>
+
+            <label for="description">Opis forum: </label>
+            <textarea class="input" id="description" rows="5" th:field="*{topicModel.description}"></textarea>
+            <div id="description-error"></div>
+
             <div class="form-footer">
                 <input type="submit" value="Wyślij" class="button">
                 <input type="reset" value="Reset" class="button">
