--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -17,6 +17,7 @@
 
     <div class="content-form">
         <h4>Podaj dane rejestracyjne</h4>
+        <div th:text="${error}" class="register-error"></div>
         <form method="post" onsubmit="return validate()">
             <label for="login">Login: </label><br>
             <input type="text" class="input" id="login" th:field="*{userModel.login}"><br>
