--- a/src/main/resources/static/common.css
+++ b/src/main/resources/static/common.css
@@ -9,7 +9,7 @@ body {
 a {
     color: #E10B14;
 }
-h1, h2, h4 {
+h1, h2, h3, h4 {
     text-align: center;
 }
 
@@ -33,7 +33,8 @@ h1, h2, h4 {
     padding: 2px;
 }
 .post-author-admin{
-    color: blue;
+    color: rgba(225, 11, 20, 1);
+    background-color: rgba(225, 11, 20, 8%);
     font-weight: bold;
     padding: 2px;
 }
@@ -68,6 +69,11 @@ h1, h2, h4 {
 .div-main-menu-link a{
     padding: 2px;
 }
+
+.div-main-menu-link a:hover{
+    text-decoration: none;
+}
+
 .topic-grid{
     display: grid;
     grid-template-columns: auto 100px;
@@ -87,12 +93,21 @@ h1, h2, h4 {
 .topic-header{
     padding: 5px;
 }
+.topic-name{
+    font-weight: bold;
+    text-decoration: none;
+}
+.topic-name:hover{
+    text-decoration:underline;
+}
 .topic-info{
     padding: 5px;
 }
 .topic-stats{
+
+    margin:auto;
     text-align: center;
-    font-size: .9em;
+    font-size: 1em;
     padding: 5px;
 }
 .thread-grid {
@@ -108,20 +123,32 @@ h1, h2, h4 {
     text-align: center;
 }
 .thread-subject{
-    padding: 5px;
+    padding: 10px;
+    font-weight: bold;
 }
 .thread-stats{
     text-align: center;
+    margin: auto;
     font-size: .9em;
     padding: 5px;
 }
+.thread-title{
+    font-weight:bold;
+    text-decoration:none;
+}
+.thread-title:hover{
+    text-decoration:underline;
+}
 
 .post-grid-headers{
-    font-size: .9rem;
+    font-size: .9em;
     display: grid;
     grid-template-columns: 160px auto;
     border: 1px solid black;
     text-align: center;
+}
+.post-header{
+    padding: 5px;
 }
 .delete-thread{
     text-align: right;
@@ -143,20 +170,21 @@ h1, h2, h4 {
 }
 .button {
     color: #E10B14;
-    background-color: #f0f0f0;
+    background-color: white;
     display: inline-block;
     margin: 10px;
     padding: 5px 10px;
     text-decoration:none;
     font-weight: bold;
     font-size: .9rem;
-    border: 1px solid #E10B14;
+    border: 2px solid #E10B14;
     border-radius: 10px;
 }
 .button:hover {
-    border-radius: 3px;
+    color: white;
+    background-color: #E10B14;
 }
-.register-error{
+.register-info{
     margin: 0px 0px 10px 15px;
     font-size: .8em;
     color: #E10B14;
