--- a/src/main/resources/static/form.css
+++ b/src/main/resources/static/form.css
@@ -12,15 +12,35 @@ label {
     margin: 10px 5px;
     width: 100%;
 }
-fieldset {
+.child:hover .parent {
+    backgroud-color:red;
+}
+.fieldset-form{
+    width: 100%;
+    border-radius: 5px;
+    margin: 10px auto;
+}
+
+
+.input-form{
+    border:none;
+    width: 100%;
+    font-size: 1rem;
+    font-weight: bold;
+    outline: none;
+}
+fieldset .gender {
     width: 50%;
     margin: 10px 5px;
+    border-radius: 5px;
 }
 .input-radio {
     display: inline-block;
     padding: 2px;
 }
-
+input[type=radio]{
+    accent-color: #E10B14;
+}
 .form-footer {
     text-align: center;
 }
