--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,15 +16,23 @@
     <th:block th:replace="~{fragments.html :: directory-link}"></th:block>
 
     <div class="content-form">
-        <h4>Podaj dane logowania</h4>
-        <div th:text="${error}" class="register-error"></div>
+        <h3>Podaj dane logowania</h3>
+        <div th:text="${info}" class="register-info"></div>
         <form method="post" onsubmit="return validate()">
-            <label for="login">Login: </label><br>
-            <input type="text" name="login" id="login" class="input">
+            <fieldset class="fieldset-form parent">
+                <legend>Login</legend>
+                <input type="text" name="login" id="login" class="input-form child" autofocus>
+            </fieldset>
+            <!--            <label for="login">Login: </label><br>-->
+            <!--            <input type="text" name="login" id="login" class="input" autofocus>-->
             <div id="login-error"></div>
 
-            <label for="password">Hasło: </label>
-            <input type="password" name="password" id="password" class="input">
+            <fieldset class="fieldset-form">
+                <legend>Hasło</legend>
+                <input type="password" name="password" id="password" class="input-form">
+            </fieldset>
+            <!--            <label for="password">Hasło: </label>-->
+            <!--            <input type="password" name="password" id="password" class="input">-->
             <div id="password-error"></div>
             <div class="form-footer">
                 <input type="submit" value="Zaloguj" class="button">
