--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -16,30 +16,55 @@
 
 
     <div class="content-form">
-        <h4>Podaj dane rejestracyjne</h4>
-        <div th:text="${error}" class="register-error"></div>
+        <h3>Podaj dane rejestracyjne</h3>
+        <div th:text="${info}" class="register-info"></div>
         <form method="post" onsubmit="return validate()">
-            <label for="login">Login: </label><br>
-            <input type="text" class="input" id="login" th:field="*{userModel.login}"><br>
+            <fieldset class="fieldset-form">
+                <legend>Login</legend>
+                <input type="text" class="input-form" id="login" th:field="*{userModel.login}" autofocus><br>
+            </fieldset>
+
+            <!--            <label for="login">Login: </label><br>-->
+            <!--            <input type="text" class="input" id="login" th:field="*{userModel.login}" autofocus><br>-->
             <div id="login-error"></div>
 
-            <label for="password">Hasło: </label><br>
-            <input type="password" class="input" id="password" th:field="*{userModel.password}"><br>
+            <fieldset class="fieldset-form">
+                <legend>Hasło</legend>
+                <input type="password" class="input-form" id="password" th:field="*{userModel.password}">
+            </fieldset>
+
+
+            <!--            <label for="password">Hasło: </label><br>-->
+            <!--            <input type="password" class="input-form" id="password" th:field="*{userModel.password}"><br>-->
             <div id="password-error"></div>
 
-            <label for="password2">Powtórz hasło: </label><br>
-            <input type="password" class="input" id="password2" name="password2"><br>
+            <fieldset class="fieldset-form">
+                <legend>Powtórz hasło</legend>
+                <input type="password" class="input-form" id="password2" name="password2">
+            </fieldset>
+            <!--            <label for="password2">Powtórz hasło: </label><br>-->
+            <!--            <input type="password" class="input-form" id="password2" name="password2"><br>-->
             <div id="password2-error"></div>
 
-            <label for="email">E-mail: </label><br>
-            <input type="text" class="input" id="email" th:field="*{userModel.email}"><br>
+            <fieldset class="fieldset-form">
+                <legend>E-mail</legend>
+                <input type="text" class="input-form" id="email" th:field="*{userModel.email}">
+            </fieldset>
+
+            <!--            <label for="email">E-mail: </label><br>-->
+            <!--            <input type="text" class="input-form" id="email" th:field="*{userModel.email}"><br>-->
             <div id="email-error"></div>
 
-            <label for="birthday">Data urodzenia: </label><br>
-            <input type="date" class="input" id="birthday" th:field="*{userModel.birthday}"><br>
+            <fieldset class="fieldset-form">
+                <legend>Data urodzenia</legend>
+                <input type="date" class="input-form" id="birthday" th:field="*{userModel.birthday}">
+            </fieldset>
+
+            <!--            <label for="birthday">Data urodzenia: </label><br>-->
+            <!--            <input type="date" class="input-form" id="birthday" th:field="*{userModel.birthday}"><br>-->
             <div id="birthday-error"></div>
 
-            <fieldset>
+            <fieldset class="fieldset-form">
                 <legend>Płeć</legend>
                 <input type="radio" id="male" name="gender" value="MALE"
                        th:field="*{userModel.gender}" checked="checked">
@@ -51,9 +76,13 @@
             </fieldset>
             <div id="gender-error"></div>
 
+            <fieldset class="fieldset-form">
+                <legend>Skąd</legend>
+                <input type="text" class="input-form" id="place" th:field="*{userModel.place}">
+            </fieldset>
 
-            <label for="place">Skąd: </label><br>
-            <input type="text" class="input" id="place" th:field="*{userModel.place}"><br>
+            <!--            <label for="place">Skąd: </label><br>-->
+            <!--            <input type="text" class="input" id="place" th:field="*{userModel.place}"><br>-->
             <div id="place-error"></div>
 
             <div class="form-footer">
