--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -16,11 +16,11 @@
     <th:block th:replace="~{fragments.html :: directory-link}"></th:block>
 
     <div class="content-form">
-        <h4>Wyszukiwarka</h4>
+        <h3>Wyszukiwarka</h3>
         <div th:text="${error}" class="register-error"></div>
-        <form method="post" onsubmit="return validate()">
+        <form method="get">
             <label for="query">Szukany tekst: </label><br>
-            <input type="text" name="query" id="query" class="input">
+            <input type="search" name="query" id="query" class="input" autofocus>
             <div id="query-error"></div>
 
 
@@ -29,6 +29,44 @@
             </div>
         </form>
     </div>
+
+    <th:block th:if="${posts.size() > 0}">
+        <div class="post-grid-headers">
+            <div class="post-header">Autor</div>
+            <div class="post-header">Wiadomość</div>
+        </div>
+
+
+        <div th:each="post : ${posts}" class="post-grid">
+            <div class="post-grid-content" th:with="currentUser=${users.getUserById(post.authorId)}">
+
+                <div th:text="${currentUser.login}"
+                     th:class="${currentUser.function == T(com.kuba.forum.model.User.Function).ADMIN} ? 'post-author-admin' : 'post-author'">
+                </div>
+
+                <div th:text="${currentUser.function.toString()}" class="post-author-info"></div>
+
+                <div class="post-author-info">
+                    <div th:text="'Wiek: ' + ${currentUser.getAge()}"></div>
+                    <div th:text="'Płeć: ' + ${currentUser.gender.toString()}"></div>
+                    <div th:text="'Dołączenie: ' + ${currentUser.getPrettyJoinDate()}"></div>
+                    <div th:text="'Posty: ' + ${users.getNumberOfPosts(post.authorId)}"></div>
+                    <div th:text="'Skąd: ' + ${currentUser.place}"></div>
+                </div>
+
+            </div>
+            <div class="post-grid-content">
+                <div>
+                    <span th:text="'Wysłano: ' + ${post.getPrettyDate()}" class="post-author-info"></span>
+                    <a th:if="${admin}"
+                       th:href="@{/thread/{threadId}/delete-post/{postId}(threadId=${thread.id},postId=${post.id})}"
+                       class="post-author-info" onclick="return confirm('Czy na pewno chcesz usunąć ten post?')">Usuń
+                        post</a>
+                </div>
+                <div th:text="${post.contents}" class="post-message"></div>
+            </div>
+        </div>
+    </th:block>
 </div>
 </body>
 </html>
